# karnet

./: .env.example  .gitignore  .npmrc  .prettierrc.json  AGENT.md  README.md  add_icons.js  biome.jsonc  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  old_nstrumentation-client.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  trigger.config.ts  tsconfig.json  turbo.json
.cursorrules/: sentry.md
ai/: gateway.ts  models.tsx  tools.ts  tools.tsx
app/: globals.css  layout.tsx  page.tsx
convex/: convex.config.ts  schema.ts
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  options.rs
crates/server/src/handler/: chat_message.rs
crates/server/src/routes/: messages.rs
docs/: architecture.md  docs.json  idea.md  portal.md
hooks/: useCommand.ts  useCopyToClipboard.ts  useDocument.ts  useModels.ts  usePageTitle.ts  useStores.ts  useSync.ts
lib/: base_prompt.md  cache.ts  date.ts  focus-manager.ts  login.tsx  markdown-to-html.ts  posthog.ts  prompt.ts  session.ts  utils.ts
mocks/: messages.ts
models/: abstract.model.ts  command.model.ts  diagram.model.ts  paper.model.ts  sketch.model.ts
page/: document.tsx  landing.tsx  login.tsx  paper.tsx  sketch.tsx  task.tsx
primitive/: priority.tsx  status.tsx
router/: page-wrapper.tsx  root.tsx  router.tsx
sentry/: sentry.edge.config.ts  sentry.server.config.ts
stores/: abstract.store.ts  chat.store.ts  root.store.ts  settings.store.ts  skeches.store.ts  task.store.ts  view.store.ts
types/: regenerate.ts
view/: abstract.view.ts  document.view.ts
(+523 files in other folders)
