[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.42", features = ["env", "derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
openai_dive = "1.2.4"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "server"
path = "src/main.rs"
